--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ramos-realty",
-  "homepage": "https://michycipher.github.io/ramos-estateApp/frontend/Ramos_Estate/",
+  "homepage": "https://michycipher.github.io/Ramos_Estate/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
